# yomitoku-client

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .pre-commit-docs-config.yaml  404.html  DEVELOPMENT.md  Makefile  NOTEBOOK_GUIDE.md  README.en.md  README.md  demo.py  index.html  mkdocs.yml  notebooks-requirements.txt  pyproject.toml  sample.json  setup-notebook-env.sh  test_sample.json
.github/workflows/: build-and-publish-docs.yml  check-docs.yml  ci-simple.yml  ci.yml  deploy-docs.yml  docs-ci.yml  lint-and-test.yml  pypi-release.yml  testpypi-release.yml
advanced/: index.html
cli-usage/: index.html
deploy-yomitoku-pro/: index.html
docs/: README.md  advanced.md  cli-usage.md  deploy-yomitoku-pro.md  iam-doc.md  index.md  installation.md  module-usage.md
docs/en/: NOTEBOOK_GUIDE.md  README.md
docs/ja/: NOTEBOOK_GUIDE.md  README.md
examples/: basic_usage.py  enhanced_features.py
iam-doc/: index.html
installation/: index.html
mkdocs/: mkdocs.yml
mkdocs/docs/: api-aws-cloudformation.md  api-aws-sagemaker.md  api-on-premises.md  deploy-aws-marketplace.md  deploy-direct.md  deploy-yomitoku-pro.md  guide.md  iam-doc.md  index.md
mkdocs/site/: 404.html  index.html
mkdocs/site/about/: index.html
mkdocs/site/search/: search_index.json
module-usage/: index.html
notebooks/: README.md  input.json  sample.md  yomitoku-client-example.ipynb  yomitoku-client-parser.ipynb  yomitoku-pro-document-analyzer.ipynb
notebooks/demo/: sample.html  sample.json
notebooks/json/: result.json  result_pdf.json  tegaki.json
scripts/: format_code.py  setup_dev.py  test_local.py
search/: search_index.json
site/: 404.html  index.html
site/cli-usage/: index.html
site/deploy-yomitoku-pro/: index.html
site/iam-doc/: index.html
site/module-usage/: index.html
site/search/: search_index.json
src/yomitoku_client/: __init__.py  cli.py  client.py  constants.py  exceptions.py  font_manager.py  models.py  parser.py  pdf_generator.py  sagemaker.py  samples.py  utils.py
src/yomitoku_client/cli/: analyze.py  batch.py  cli.py  sagemaker.py  single.py
src/yomitoku_client/formatters/: __init__.py
src/yomitoku_client/parsers/: __init__.py  sagemaker_parser.py
src/yomitoku_client/renderers/: base.py  csv_renderer.py  factory.py  html_renderer.py  json_renderer.py  markdown_renderer.py  pdf_generator.py  pdf_renderer.py  searchable_pdf.py
src/yomitoku_client/resource/: cloudformation.yaml
src/yomitoku_client/samples/: __init__.py  pdf_sample.json
src/yomitoku_client/visualizers/: __init__.py  base.py  chart_visualizer.py  document_visualizer.py  table_exporter.py  table_visualizer.py
tests/: __init__.py  test_basic_functionality.py  test_cli_batch.py  test_cli_sagemaker.py  test_cli_single.py  test_client.py  test_enhanced_features.py  test_exceptions.py  test_parsers.py  test_sagemaker_manager.py
tests/data/: image_pdf.json
utils/: check_license.py  test_check_license.py
