[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[project]
name = "yomitoku-client"
version = "0.1.0"
authors = [{name = "Yomitoku Team", email = "support-aws-marketplace@mlism.com"}]
description = "Yomitoku Client is a Python library for processing SageMaker Yomitoku API outputs with format conversion and visualization capabilities."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8,<3.13"
keywords = ["yomitoku", "sagemaker", "document-analysis", "format-conversion", "visualization"]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "matplotlib>=3.6.0",
    "plotly>=5.13.0",
    "streamlit>=1.22.0",
    "pydantic>=2.9.2",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "python-dotenv>=0.21.0",
    "click>=8.1.0",
    "lxml>=5.3.0",
    "openpyxl>=3.0.10",
    "python-docx>=0.8.11",
    "PyPDF2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.7.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.44",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
]

[project.scripts]
yomitoku = "yomitoku_client.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.7.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.44",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ICN", "INP", "ISC", "ICN", "G", "SIM", "TID", "TCH", "INT", "Q", "ARG", "PIE", "PYI", "PT", "YTT", "S", "BLE", "FBT", "B", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ICN", "INP", "ISC", "ICN", "G", "SIM", "TID", "TCH", "INT", "Q", "ARG", "PIE", "PYI", "PT", "YTT", "S", "BLE", "FBT"]
ignore = ["E501", "B008", "C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
